--- a/assets/sass/main.css
+++ b/assets/sass/main.css
@@ -1,1 +1,53 @@
-/*# sourceMappingURL=main.css.map */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 14px 89px 13px 89px;
+}
+.header__logo {
+  width: 200px;
+  height: 30px;
+  padding: 0px 19px 0px 16px;
+}
+
+.location_zone {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 50px;
+  background-color: #e7e7e7;
+  gap: 17px;
+}
+
+.explorer-restaurant {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  background: #F6F6F6;
+}
+.explorer-restaurant__title {
+  padding: 30px 58px 10px 42px;
+}
+.explorer-restaurant__text {
+  padding: 0 34px 0 26px;
+}
+.explorer-restaurant__btn {
+  background: linear-gradient(#FF79DA, #9356DC);
+  border: none;
+  border-radius: 25px;
+  padding: 13px 16px;
+  color: #fff;
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
+  font-weight: bold;
+  width: 218px;
+  height: 50px;
+  margin: 20px 0 50px 0;
+}/*# sourceMappingURL=main.css.map */
