index css finish without animation

--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -1,6 +1,8 @@
 $color-main:#9356DC;
 $color-secondary: #FF79DA;
+$color-tertiaire: #99E2D0;
 $color-bg-grey: #F6F6F6;
+$color-white: #FFF;
 
 $main-gradient: linear-gradient($color-secondary, $color-main);
 
