--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -4,6 +4,7 @@
 @import 'abstracts/animations';
 
 @import 'base/reset';
+@import 'base/typography';
 
 @import 'layout/header';
 @import 'layout/body';
