--- a/assets/sass/abstracts/_mixins.scss
+++ b/assets/sass/abstracts/_mixins.scss
@@ -7,3 +7,12 @@
     box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
     font-weight: bold;
   }
+
+@mixin btn-heart {
+  border: none;
+  background: none;
+  }
+
+@mixin btn-display {
+  display: none;
+}
