--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -1,3 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700&family=Shrikhand&display=swap");
+
+
+
+
+
+* {
+font-family: 'Roboto', sans-serif;
+font-weight: 500;
+}
 a {
     text-decoration: none;
 }
