--- a/assets/sass/abstracts/_mixins.scss
+++ b/assets/sass/abstracts/_mixins.scss
@@ -1,12 +1,26 @@
+@mixin shadowlight {
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15)
+}
+@mixin shadowbtn {
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.35);
+}
+
 @mixin btn-order {
     background: $main-gradient;
     border: none ;
     border-radius: 25px;
     padding: 13px 16px;
+    height: 50px;
     color: #fff;
     box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
     font-weight: bold;
   }
+
+@mixin btn-hover {
+  background-color: lighten($color-main, 10%);
+  background-blend-mode: lighten;
+  transition: background-color 0.8s;
+} 
 
 @mixin btn-heart {
   border: none;
