--- a/assets/sass/abstracts/_mixins.scss
+++ b/assets/sass/abstracts/_mixins.scss
@@ -11,7 +11,7 @@
     border-radius: 25px;
     padding: 13px 16px;
     height: 50px;
-    color: #fff;
+    color: $color-white;
     box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
     font-weight: bold;
   }
@@ -19,7 +19,8 @@
 @mixin btn-hover {
   background-color: lighten($color-main, 10%);
   background-blend-mode: lighten;
-  transition: background-color 0.8s;
+  @include shadowbtn;
+  transition: background-color 0.9s;
 } 
 
 @mixin btn-heart {
@@ -29,4 +30,33 @@
 
 @mixin btn-display {
   display: none;
+}
+
+@mixin heart-empty {
+  transition: opacity 0.3s ease-in-out;
+  &:hover {
+      opacity: 0;
+  } 
+}
+@mixin heart-filled {
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out, transform 2s ease-in-out;
+  color: $color-tertiaire;
+  &:hover {
+      opacity: 1;
+      top: 0;
+  }
+  &:active {
+    opacity: 1; // L'élément reste visible lorsque cliqué
+  }
+}
+
+
+@mixin truncate-text {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
