--- a/assets/sass/main.css
+++ b/assets/sass/main.css
@@ -29,6 +29,10 @@ a {
   position: absolute;
   left: 17px;
 }
+.header__nav i {
+  color: black;
+  font-size: 25px;
+}
 
 .restaurant-card__favorite-button {
   border: none;
@@ -79,8 +83,9 @@ a {
   align-items: center;
   width: 100%;
   height: 50px;
-  background-color: #e7e7e7;
   gap: 17px;
+  background-color: #e7e7e7;
+  box-shadow: inset 0px 2px 4px 0px rgba(0, 0, 0, 0.15);
 }
 
 .explorer-restaurants {
@@ -104,7 +109,7 @@ a {
   border-radius: 25px;
   padding: 13px 16px;
   height: 50px;
-  color: #fff;
+  color: #FFF;
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
   font-weight: bold;
   width: 218px;
@@ -113,8 +118,8 @@ a {
 .explorer-restaurants__btn:hover {
   background-color: #ae80e5;
   background-blend-mode: lighten;
-  transition: background-color 0.8s;
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.35);
+  transition: background-color 0.9s;
 }
 
 .functioning h2 {
@@ -233,11 +238,30 @@ a {
 .restaurants-card__favorite-button {
   border: none;
   background: none;
-  margin-right: 33px;
-  color: black;
+  margin: 33px;
+  position: relative;
+  cursor: pointer;
 }
-.restaurants-card__new-icon {
-  display: none;
+.restaurants-card__favorite-button--heart {
+  transition: opacity 0.3s ease-in-out;
+}
+.restaurants-card__favorite-button--heart:hover {
+  opacity: 0;
+}
+.restaurants-card__favorite-button--new-icon {
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out, transform 2s ease-in-out;
+  color: #99E2D0;
+}
+.restaurants-card__favorite-button--new-icon:hover {
+  opacity: 1;
+  top: 0;
+}
+.restaurants-card__favorite-button--new-icon:active {
+  opacity: 1;
 }
 
 .main {
@@ -258,9 +282,8 @@ a {
 }
 .restaurant__info {
   display: flex;
-  flex-direction: row;
+  align-items: center;
   justify-content: center;
-  padding: 32px 0;
 }
 .restaurant__info h1 {
   font-family: "Shrikhand", sans-serif;
@@ -270,6 +293,28 @@ a {
   border: none;
   background: none;
   padding: 0 24px;
+  cursor: pointer;
+}
+.restaurant__favorite-button--heart {
+  transition: opacity 0.3s ease-in-out;
+}
+.restaurant__favorite-button--heart:hover {
+  opacity: 0;
+}
+.restaurant__favorite-button--new-icon {
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out, transform 2s ease-in-out;
+  color: #99E2D0;
+}
+.restaurant__favorite-button--new-icon:hover {
+  opacity: 1;
+  top: 0;
+}
+.restaurant__favorite-button--new-icon:active {
+  opacity: 1;
 }
 .restaurant__menu {
   padding: 0 13px;
@@ -303,20 +348,28 @@ a {
 .restaurant__item {
   display: flex;
   justify-content: space-between;
-  border: none;
   height: 72px;
-  border-radius: 15px;
   padding: 15px;
   background: #FFF;
+  border: none;
+  border-radius: 15px;
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
 }
-.restaurant__item h3 {
+.restaurant__item-info {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.restaurant__item-info h3 {
   font-size: 1.125em;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
 }
-.restaurant__item p {
+.restaurant__item-info p {
   font-size: 0.9375em;
   font-weight: 300;
   overflow: hidden;
@@ -339,7 +392,7 @@ a {
   border-radius: 25px;
   padding: 13px 16px;
   height: 50px;
-  color: #fff;
+  color: #FFF;
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
   font-weight: bold;
   width: 186px;
@@ -347,5 +400,6 @@ a {
 .restaurant__order-button:hover {
   background-color: #ae80e5;
   background-blend-mode: lighten;
-  transition: background-color 0.8s;
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.35);
+  transition: background-color 0.9s;
 }/*# sourceMappingURL=main.css.map */
