--- a/assets/sass/pages/_menu_page.scss
+++ b/assets/sass/pages/_menu_page.scss
@@ -14,9 +14,8 @@
     background-color: $color-bg-grey;
     &__info {
         display: flex;
-        flex-direction: row;
+        align-items: center;
         justify-content: center;
-        padding: 32px 0;
         & h1 {
             font-family: "Shrikhand", sans-serif;
             font-size: $font-size-extra-extra-large;
@@ -24,7 +23,14 @@
     }
     &__favorite-button {
         @include btn-heart;
-        padding: 0 24px;
+        padding: 0 24px;       
+        cursor: pointer;
+        &--heart {
+            @include heart-empty;
+        }
+        &--new-icon {
+            @include heart-filled;
+        }
     }
     &__menu {
         padding: 0 13px;
@@ -57,26 +63,28 @@
     }
     &__item {
         display: flex;
-        justify-content: space-between;
-        border: none;
+        justify-content: space-between;        
         height: 72px;
-        border-radius: 15px;
         padding: 15px;
         background: $color-white;
-        @include shadowlight;     
-        & h3 {
+        border: none;
+        border-radius: 15px;               
+        @include shadowlight;
+        &-info {
+            display: flex;
+            flex-direction: column;
+            gap: 5px;
+            @include truncate-text;
+            & h3 {
             font-size: $font-size-large;
-            overflow: hidden;
-            white-space: nowrap;
-            text-overflow: ellipsis;
-        }
-        & p {
+            @include truncate-text;
+            }
+            & p {
             font-size: $font-size-small-plus;
             font-weight: $font-weight-light;
-            overflow: hidden;
-            white-space: nowrap;
-            text-overflow: ellipsis;
-        }   
+            @include truncate-text;
+            }      
+        }
     }
     &__item-price {
         display: flex;
