--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -2,6 +2,7 @@
 @import 'abstracts/mixins';
 @import 'abstracts/functions';
 @import 'abstracts/animations';
+@import 'abstracts/keyframes';
 
 @import 'base/reset';
 @import 'base/typography';
