--- a/assets/sass/pages/_menu_page.scss
+++ b/assets/sass/pages/_menu_page.scss
@@ -16,6 +16,8 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        padding: 32px 0 40px 0;
+        gap: 24px;
         & h1 {
             font-family: "Shrikhand", sans-serif;
             font-size: $font-size-extra-extra-large;
@@ -23,7 +25,7 @@
     }
     &__favorite-button {
         @include btn-heart;
-        padding: 0 24px;       
+        position: relative;      
         cursor: pointer;
         &--heart {
             @include heart-empty;
@@ -104,3 +106,4 @@
         }
     }   
 }
+
