--- a/assets/sass/pages/_menu_page.scss
+++ b/assets/sass/pages/_menu_page.scss
@@ -64,24 +64,33 @@
         }
     }
     &__item {
+        position: relative;
         display: flex;
         justify-content: space-between;        
-        height: 72px;
-        padding: 15px;
+        height: 69px;
         background: $color-white;
         border: none;
         border-radius: 15px;               
         @include shadowlight;
+        overflow: hidden;
+        cursor: pointer; 
+        &:hover .restaurant__add-selection {
+            margin-right: 0px;
+        }
         &-info {
             display: flex;
             flex-direction: column;
+            flex: 1;
+            margin: 0 0 0 15px;
             gap: 5px;
             @include truncate-text;
             & h3 {
+            padding: 15px 0 0 0;
             font-size: $font-size-large;
             @include truncate-text;
             }
             & p {
+            padding: 0 15px 0 0;
             font-size: $font-size-small-plus;
             font-weight: $font-weight-light;
             @include truncate-text;
@@ -92,6 +101,20 @@
         display: flex;
         align-items: flex-end;
         font-size: $font-size-small-plus;
+        margin: 15px;
+    }
+    &__add-selection {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: auto;
+        background-color: $color-tertiaire;
+        width: 60px;
+        margin-right: -60px;
+        border-radius: 0px 15px 15px 0px;
+        transition: all 0.5s;
+        color: white;
+        font-size: 25px;      
     }
     &__order {
         display: flex;
@@ -106,4 +129,3 @@
         }
     }   
 }
-
