--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -28,8 +28,8 @@
             width: 218px;
             margin: 20px 0 50px 0;
             &:hover {
-                @include btn-hover;                
-            }
+                @include btn-hover;                               
+            }            
         }       
 }
 
@@ -101,6 +101,10 @@
     margin: auto;
     width: 92%;
     padding-bottom: 18px;
+    transition: transform 0.2s;
+        &:hover {
+            transform: scale(1.01);
+        }
     &__image {
         overflow: hidden;
         width: 100%;
