--- a/assets/sass/pages/_menu_page.scss
+++ b/assets/sass/pages/_menu_page.scss
@@ -120,6 +120,7 @@
         display: flex;
         text-align: center;
         justify-content: center;
+        cursor: pointer;
         &-button {           
             @include btn-order;
             width: 186px;
