--- a/assets/sass/main.css
+++ b/assets/sass/main.css
@@ -5,7 +5,7 @@
     opacity: 0;
   }
   50% {
-    opacity: 0.5;
+    opacity: 0.65;
   }
   75% {
     opacity: 1;
@@ -17,13 +17,13 @@
 }
 .fade-in {
   transform-origin: top;
-  animation: fade-in 2s forwards;
+  animation: fade-in 1.5s forwards;
 }
 .fade-in--second {
-  animation: fade-in 2s 500ms both;
+  animation: fade-in 2s 400ms both;
 }
 .fade-in--third {
-  animation: fade-in 2s 1000ms both;
+  animation: fade-in 2s 800ms both;
 }
 
 @keyframes appearFromBottom {
@@ -63,6 +63,10 @@ a {
 .header__nav {
   position: absolute;
   left: 17px;
+  transition: transform 0.2s;
+}
+.header__nav:hover {
+  transform: scale(1.2);
 }
 .header__nav i {
   color: black;
