--- a/assets/sass/main.css
+++ b/assets/sass/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700&family=Shrikhand&display=swap");
 @keyframes fade-in {
   0% {
@@ -77,9 +78,20 @@ a {
   background-color: #353535;
   padding: 22px 25px;
 }
+@media screen and (min-width: 1024px) {
+  .footer {
+    padding: 30px 25px;
+  }
+}
 .footer__content {
   display: flex;
   flex-direction: column;
+  gap: 16px;
+}
+@media screen and (min-width: 1024px) {
+  .footer__content {
+    flex-direction: row-reverse;
+  }
 }
 .footer__logo img {
   width: 137px;
@@ -87,7 +99,12 @@ a {
   filter: brightness(0) invert(1);
 }
 .footer__links {
-  margin-top: 16px;
+  display: flex;
+}
+@media screen and (min-width: 1024px) {
+  .footer__links {
+    align-items: center;
+  }
 }
 .footer__list {
   list-style: none;
@@ -96,10 +113,25 @@ a {
   flex-direction: column;
   gap: 7px;
 }
+@media screen and (min-width: 1024px) {
+  .footer__list {
+    flex-direction: row;
+    gap: 15px;
+  }
+}
 .footer__item a {
   display: flex;
   color: white;
   align-items: center;
+}
+.footer__item:hover {
+  text-decoration: underline;
+  color: white;
+}
+@media screen and (min-width: 1024px) {
+  .footer__item:nth-child(3) {
+    margin-left: 20px; /* Ajoutez la marge souhaitée entre "Devenir partenaire" et "Mentions légales" */
+  }
 }
 .footer__icon {
   margin-right: 12px;
@@ -354,7 +386,7 @@ a {
   -webkit-text-fill-color: transparent;
 }
 .restaurant__menu {
-  padding: 0 13px;
+  padding: 0 10px;
   display: flex;
   flex-direction: column;
   gap: 40px;
@@ -415,7 +447,7 @@ a {
   text-overflow: ellipsis;
 }
 .restaurant__item-info p {
-  padding: 0 15px 0 0;
+  padding: 0 0 15px 0;
   font-size: 0.9375em;
   font-weight: 300;
   overflow: hidden;
@@ -426,7 +458,7 @@ a {
   display: flex;
   align-items: flex-end;
   font-size: 0.9375em;
-  margin: 15px;
+  margin: 0 15px 12px 0;
 }
 .restaurant__add-selection {
   display: flex;
