--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -3,6 +3,9 @@
     align-items: center;
     justify-content: center;
     padding: 14px 0 13px 0;
+    @media screen and (min-width: map-get($breakpoints, desktop)) {
+        padding: 30px 0 32px 0;     
+    }
         &__logo {                       
             width: 200px;
             height: 30px;   
