--- a/assets/sass/main.css
+++ b/assets/sass/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700&family=Shrikhand&display=swap");
 @keyframes fade-in {
   0% {
@@ -55,6 +54,11 @@ a {
   align-items: center;
   justify-content: center;
   padding: 14px 0 13px 0;
+}
+@media screen and (min-width: 1024px) {
+  .header {
+    padding: 30px 0 32px 0;
+  }
 }
 .header__logo {
   width: 200px;
@@ -130,7 +134,7 @@ a {
 }
 @media screen and (min-width: 1024px) {
   .footer__item:nth-child(3) {
-    margin-left: 20px; /* Ajoutez la marge souhaitée entre "Devenir partenaire" et "Mentions légales" */
+    margin-left: 20px;
   }
 }
 .footer__icon {
